--- a/_config.yml
+++ b/_config.yml
@@ -61,4 +61,7 @@ google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
 theme: jekyll-theme-prologue
-collections: [sections]
+remote_theme: chrisbobbe/jekyll-theme-prologue
+title: homepage
+collections:
+  - sections
