--- a/_config.yml
+++ b/_config.yml
@@ -62,5 +62,4 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
 title: homepage
-collections:
-  - sections
+collections: [sections]
